crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_import_alias.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package samples.imports

import kotlin.collections.MutableMap as KMutableMap

class ImportAlias(val values: KMutableMap<String, Int>)

diagnostics:
(none)
