crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_import_qualified_members.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package samples.imports

import kotlin.time.Duration.Companion.seconds

val timeout = 5.seconds

diagnostics:
(none)
