crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_import_soft_keyword_qualified_names.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package samples.soft.context

import samples.field.get.set as Accessors
import samples.where.by.context

val imported = Accessors::class

diagnostics:
(none)
