crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_import_star.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package samples.imports

import kotlin.collections.*

class StarImport(val names: List<String>)

diagnostics:
(none)
