crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_interface_fun_and_sealed.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun interface Decoder<T> {
  fun decode(text: String): T
}

sealed interface Node

diagnostics:
(none)
