crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_interface_members_and_properties.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
interface Named {
  val name: String

  fun display(): String = name
}

diagnostics:
(none)
