crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_jump_labeled_return_break_continue.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun jumps(values: List<Int>): Int {
  loop@ for (value in values) {
    if (value < 0) continue@loop
    if (value == 0) break@loop
    values.forEach inner@{ if (it == value) return@inner }
    return value
  }
  return -1
}

diagnostics:
(none)
