crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_lambda_anonymous_function_expressions.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun anonymous(values: List<Int>) {
  val block =
    fun(value: Int): Int {
      return value * 2
    }
  val expression = fun(value: Int): Int = value + 1
  val receiver =
    fun MutableMap<String, Expression<*>>.() {
      put("value", expression)
    }
  values.map(block).map(expression)
}

diagnostics:
(none)
