crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_lambda_parameter_forms_and_labels.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun lambdas(values: List<String>) {
  val implicit = values.map { it.length }
  val typed = values.map { value: String -> value.trim() }
  val labeled =
    values.forEach label@{
      if (it.isEmpty()) return@label
      consume(it)
    }
  val block =
    {
      val maxLine: (String) -> Int =
        { text ->
          if (text.indexOf(' ') == -1) {
            0
          } else {
            text.length
          }
        }
      maxLine
    }
  val functionTyped =
    values.map { transform: (String) -> Int -> transform("value") }
}

diagnostics:
(none)
