crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_loop_label_this_and_super_expressions.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
open class Parent {
  open fun visit() {}
}

class Child
  : Parent() {
  inner class Walker {
    fun walk(items: List<String>) {
      outer@ for (item in items) {
        if (item.isEmpty()) continue@outer
        this@Child.visit()
        super<Parent>.visit()
      }
    }
  }
}

diagnostics:
(none)
